# postgres

./: .cirrus.tasks.yml  .cirrus.yml  README.gtt.txt  configure  configure.ac  meson.build  meson_options.txt
config/: prep_buildtree
contrib/amcheck/: verify_heapam.c  verify_nbtree.c
contrib/basebackup_to_shell/t/: 001_basic.pl
contrib/basic_archive/: Makefile  basic_archive.c
contrib/cube/: meson.build
contrib/dblink/: dblink.c
contrib/hstore/: hstore_io.c
contrib/pageinspect/: brinfuncs.c  fsmfuncs.c  heapfuncs.c  meson.build  rawpage.c
contrib/pg_buffercache/: pg_buffercache_pages.c
contrib/pg_stat_statements/: Makefile  pg_stat_statements.c
contrib/pg_stat_statements/expected/: entry_timestamp.out
contrib/pg_stat_statements/sql/: entry_timestamp.sql
contrib/pg_surgery/: heap_surgery.c
contrib/pg_visibility/: pg_visibility.c
contrib/pg_walinspect/: meson.build
contrib/pgstattuple/: pgstatapprox.c
contrib/postgres_fdw/: connection.c  postgres_fdw.c
contrib/postgres_fdw/expected/: postgres_fdw.out
contrib/postgres_fdw/sql/: postgres_fdw.sql
contrib/seg/: meson.build
contrib/sslinfo/: sslinfo.c
contrib/test_decoding/: Makefile  test_decoding.c
contrib/test_decoding/expected/: ddl.out
contrib/test_decoding/specs/: catalog_change_snapshot.spec
contrib/vacuumlo/: vacuumlo.c
doc/src/sgml/: catalogs.sgml  charset.sgml  config.sgml  datatype.sgml  ddl.sgml  func.sgml  libpq.sgml  maintenance.sgml  monitoring.sgml  mvcc.sgml  perform.sgml  plpgsql.sgml  protocol.sgml  trigger.sgml
src/: Makefile.global.in  meson.build
src/backend/: Makefile  meson.build
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: aclchk.c  dependency.c  heap.c  index.c  namespace.c  objectaddress.c  partition.c  pg_constraint.c  pg_db_role_setting.c  pg_inherits.c  pg_publication.c  storage.c  system_functions.sql  system_views.sql
src/backend/commands/: analyze.c  async.c  cluster.c  colenccmds.c  comment.c  copyfrom.c  copyfromparse.c  event_trigger.c  explain.c  extension.c  functioncmds.c  indexcmds.c  matview.c  meson.build  prepare.c  publicationcmds.c  sequence.c  subscriptioncmds.c  tablecmds.c  tablespace.c  trigger.c  typecmds.c  user.c  vacuum.c  variable.c
src/backend/executor/: execExprInterp.c  execMain.c  execMerge.c  execParallel.c  execPartition.c  execReplication.c  execUtils.c  nodeAgg.c  nodeAppend.c  nodeHash.c  nodeMergeAppend.c  nodeModifyTable.c  spi.c
src/backend/foreign/: foreign.c
src/backend/libpq/: auth.c  hba.c  pqcomm.c
src/backend/main/: main.c
src/backend/nodes/: bitmapset.c  copyfuncs.c  equalfuncs.c  makefuncs.c  nodeFuncs.c  outfuncs.c  readfuncs.c
src/backend/parser/: analyze.c  gram.y  meson.build  parse_clause.c  parse_expr.c  parse_merge.c  parse_relation.c  parse_target.c  parse_utilcmd.c
src/backend/partitioning/: partprune.c
src/backend/po/: meson.build
src/backend/port/: sysv_shmem.c  win32_shmem.c
src/backend/postmaster/: autovacuum.c  checkpointer.c  pgarch.c  (+2 more)
src/backend/utils/misc/: check_guc  guc.c  guc_funcs.c  guc_tables.c  help_config.c  meson.build  pg_config.c  pg_controldata.c  postgresql.conf.sample  ps_status.c  stack_depth.c
src/common/: Makefile  compression.c  file_utils.c  meson.build  z_stream.c  zpq_stream.c
src/fe_utils/: meson.build  string_utils.c
src/include/: c.h  fmgr.h  funcapi.h  meson.build  miscadmin.h  pg_config.h.in  port.h  postgres.h
src/include/parser/: kwlist.h  meson.build  parse_clause.h  parse_merge.h  parse_node.h  parse_relation.h
src/interfaces/ecpg/compatlib/: meson.build
src/interfaces/ecpg/pgtypeslib/: meson.build
src/interfaces/ecpg/preproc/: Makefile  meson.build  parse.pl
src/interfaces/ecpg/preproc/po/: meson.build
src/port/: dirmod.c  meson.build
src/test/: meson.build
src/tools/: irlink  pgflex  testwrap
(+401 files in other folders)
